tests/baselines/reference/derivedClassOverridesProtectedMembers4.errors.txt
tests/cases/conformance/classes/members/inheritanceAndOverriding/derivedClassOverridesProtectedMembers4.ts(9,12): error TS2612: Property 'a' will overwrite the base property in 'Base'. Add a 'declare' modifier or an initializer to avoid this.
tests/cases/conformance/classes/members/inheritanceAndOverriding/derivedClassOverridesProtectedMembers4.ts(12,7): error TS2415: Class 'Derived2' incorrectly extends base class 'Derived1'.
  Property 'a' is protected in type 'Derived2' but public in type 'Derived1'.
tests/cases/conformance/classes/members/inheritanceAndOverriding/derivedClassOverridesProtectedMembers4.ts(13,15): error TS2612: Property 'a' will overwrite the base property in 'Derived1'. Add a 'declare' modifier or an initializer to avoid this.


==== tests/cases/conformance/classes/members/inheritanceAndOverriding/derivedClassOverridesProtectedMembers4.ts (3 errors) ====
    var x: { foo: string; }
    var y: { foo: string; bar: string; }
    
    class Base {
        protected a: typeof x;
    }
    
    class Derived1 extends Base {
        public a: typeof x;
               ~
!!! error TS2612: Property 'a' will overwrite the base property in 'Base'. Add a 'declare' modifier or an initializer to avoid this.
    }
    
    class Derived2 extends Derived1 {
          ~~~~~~~~
!!! error TS2415: Class 'Derived2' incorrectly extends base class 'Derived1'.
!!! error TS2415:   Property 'a' is protected in type 'Derived2' but public in type 'Derived1'.
        protected a: typeof x; // Error, parent was public
                  ~
!!! error TS2612: Property 'a' will overwrite the base property in 'Derived1'. Add a 'declare' modifier or an initializer to avoid this.
    }